compiler/test/parse-err/select-binary-func-non-bool-return.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

// expected-note@below{{function returns '!graphalg.mat<1 x 1 x f64>'}}
func returnsBinaryReal(a: int, b: int) -> real {
    return real(3.14);
}

func SelectBinaryFuncNonBoolReturn(
    a: Matrix<s, s, int>,
    b: int) -> Matrix<s, s, int> {
    // Binary select also requires the function to return bool
    // expected-error@below{{select() requires function to return bool}}
    return select(returnsBinaryReal, a, b);
}
